Bug 411416 - Tiff file in Recent Documents bothers the user if it's not possible to open it
Summary: Tiff file in Recent Documents bothers the user if it's not possible to open it
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-08-29 10:34 UTC by Tiar
Modified: 2019-09-10 08:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2019-08-29 10:34:46 UTC
SUMMARY
When you have a tiff file in Recent Documents that Krita cannot open, it will bother the user every time they open Krita that they can't open this tiff file and why. It's most probably because for all other file format the default Qt image opener is used, while for tiff files the Krita internal one is used.

I got it by trying to save the tiff to the location with not enough space. The 0 bytes file was created and the url got recorded in Recent Documents, but of course the file from the url coul not be opened.

Related to the solution of the bug 408731 + related to the issue of unsiccessfully saved files to Recent Documents (which might've not been reported yet).

Note that just fixing the Recent Documents thing (only saving urls of files that were successfully written or read) is not enough because there always can be a tiff file saved on another disk that got unplugged etc.

STEPS TO REPRODUCE
1. Create an empty file and name it "something.tiff"
2. Modify kritarc to include this file in Recent Documents
3. Open Krita

OBSERVED RESULT
Error message dialogs about not being able to open the tiff file.

EXPECTED RESULT
No error messages. They will be shown if the user wants to open this particular file anyway.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma:
Krita git 9a19a6a6e956c1f5cd1baff0edd7b13ae17c24d8
Comment 1 Halla Rempt 2019-08-29 10:39:26 UTC
Go to File->Recent Files->Clear List and the recent files list will be emptied. Next time you start Krita, the welcome schreen will be empty. The only thing that needs to be done is to also clear the welcome screen immediately.
Comment 2 Halla Rempt 2019-08-29 11:28:36 UTC
Git commit 61d25bdecf8e12296643271ed891cbe30b848606 by Boudewijn Rempt.
Committed on 29/08/2019 at 10:52.
Pushed by rempt into branch 'master'.

Let the clear files command also clear the welcome page widget

M  +1    -2    libs/ui/KisMainWindow.cpp
M  +4    -1    libs/ui/KisWelcomePageWidget.h

https://invent.kde.org/kde/krita/commit/61d25bdecf8e12296643271ed891cbe30b848606
Comment 3 Halla Rempt 2019-08-29 11:28:36 UTC
Git commit 7b4344a8d21c49556a2daf08ada49cdfc41b8789 by Boudewijn Rempt.
Committed on 29/08/2019 at 10:52.
Pushed by rempt into branch 'master'.

Load the tiff file for the recent documents list in batch mode

This should prevent error messages from happening.

M  +1    -0    libs/ui/KisWelcomePageWidget.cpp

https://invent.kde.org/kde/krita/commit/7b4344a8d21c49556a2daf08ada49cdfc41b8789
Comment 4 Halla Rempt 2019-08-29 11:28:36 UTC
Git commit bbaf13b208309e55630d2963330b0150a1a6f62c by Boudewijn Rempt.
Committed on 29/08/2019 at 11:28.
Pushed by rempt into branch 'master'.

Don't show error dialogs in batch mode

M  +3    -3    libs/ui/KisDocument.cpp

https://invent.kde.org/kde/krita/commit/bbaf13b208309e55630d2963330b0150a1a6f62c
Comment 5 Halla Rempt 2019-08-29 11:28:36 UTC
Git commit 3368225bf00b0f4843287a7350b87387dbcbe9cd by Boudewijn Rempt.
Committed on 29/08/2019 at 11:28.
Pushed by rempt into branch 'master'.

Remove files we cannot load from the recent files list

M  +7    -0    libs/ui/KisMainWindow.cpp
M  +5    -0    libs/ui/KisMainWindow.h
M  +22   -6    libs/ui/KisWelcomePageWidget.cpp

https://invent.kde.org/kde/krita/commit/3368225bf00b0f4843287a7350b87387dbcbe9cd
Comment 6 Halla Rempt 2019-09-10 08:27:56 UTC
Git commit bd99b0ba9509dbe378cfc419b841afcc587e59b7 by Boudewijn Rempt.
Committed on 10/09/2019 at 08:24.
Pushed by rempt into branch 'krita/4.2'.

Load the tiff file for the recent documents list in batch mode

This should prevent error messages from happening.

M  +1    -0    libs/ui/KisWelcomePageWidget.cpp

https://invent.kde.org/kde/krita/commit/bd99b0ba9509dbe378cfc419b841afcc587e59b7
Comment 7 Halla Rempt 2019-09-10 08:27:57 UTC
Git commit 8c74595cbf3500e73efbacf4cc08895e8eff56ef by Boudewijn Rempt.
Committed on 10/09/2019 at 08:24.
Pushed by rempt into branch 'krita/4.2'.

Don't show error dialogs in batch mode

M  +3    -3    libs/ui/KisDocument.cpp

https://invent.kde.org/kde/krita/commit/8c74595cbf3500e73efbacf4cc08895e8eff56ef
Comment 8 Halla Rempt 2019-09-10 08:27:57 UTC
Git commit 1b9653a5cfea56d2dfa686b69fb92691ad7828b1 by Boudewijn Rempt.
Committed on 10/09/2019 at 08:24.
Pushed by rempt into branch 'krita/4.2'.

Let the clear files command also clear the welcome page widget

M  +1    -2    libs/ui/KisMainWindow.cpp
M  +14   -1    libs/ui/KisWelcomePageWidget.h

https://invent.kde.org/kde/krita/commit/1b9653a5cfea56d2dfa686b69fb92691ad7828b1
Comment 9 Halla Rempt 2019-09-10 08:27:57 UTC
Git commit 5aabcad99237c580f199da1c9d0e6bc293bf9d82 by Boudewijn Rempt.
Committed on 10/09/2019 at 08:24.
Pushed by rempt into branch 'krita/4.2'.

Remove files we cannot load from the recent files list

M  +7    -0    libs/ui/KisMainWindow.cpp
M  +5    -0    libs/ui/KisMainWindow.h
M  +22   -6    libs/ui/KisWelcomePageWidget.cpp

https://invent.kde.org/kde/krita/commit/5aabcad99237c580f199da1c9d0e6bc293bf9d82