Load the tiff file for the recent documents list in batch mode

This should prevent error messages from happening.

BUG:411416